# circuit-benchmarks-guppy

./: .gitignore  Arbrb Example.ipynb  Binary RB Example.ipynb  Clifford_tools.py  Cycle Benchmarking Example - Iceberg.ipynb  Cycle Benchmarking Example.ipynb  Fully Random Binary RB Example.ipynb  Fully Random MB Example.ipynb  Fully Random SQRB Example.ipynb  GHZ Example.ipynb  GHZ.py  Helios Binary RB Example.ipynb  Helios binary_RB.py  MCMR Crosstalk Comp Basis Example.ipynb  MCMR Crosstalk Example.ipynb  Mirror Benchmarking Example - Iceberg.ipynb  Mirror Benchmarking Example.ipynb  README.md  SPAM Example.ipynb  SQRB Example.ipynb  Single SQRB Example - Iceberg.ipynb  Single SQRB Example.ipynb  TQRB Example.ipynb  TQ_cycle_benchmarking.py  TQ_cycle_benchmarking_iceberg.py  Transport SQRB Example.ipynb  analysis_tools.py  arbrb.py  binary_RB.py  binary_rb_16_4_0.hugr  bootstrap.py  devenv.nix  dfl_parser.py  exp_SQRB_example-1.p  exp_SQRB_example.p  exp_TQRB_example.p  exp_single_SQRB_example.p  exp_transport_SQRB_example.p  experiment.py  fully_random_binary_RB.py  (+21 more)
circuit_benchmarks/: __init__.py
circuit_benchmarks/benchmarks/: GHZ.py  SQ_Clifford_group.p  TQ_cycle_benchmarking.py  __init__.py  arbrb.py  binary_RB.py  fully_random_binary_RB.py  fully_random_mirror_benchmarking.py  fully_random_sqrb.py  mcmr_crosstalk.py  mirror_benchmarking.py  n1_lookup_tables.json  spam.py  sqrb.py  tqrb.py  transport_sqrb.py
circuit_benchmarks/experiment_class/: experiment.py
circuit_benchmarks/utils/: Clifford_tools.py  TQ_Clifford_group.p  analysis_tools.py  bootstrap.py  dfl_parser.py  randomized_compiling.py
docs/: Dockerfile  conf.py  index.rst
docs/src/_scripts/: format_index_files.py  link_notebooks_folder.py
notebooks/: Arbrb Example.ipynb  Binary RB Example.ipynb  Binary_RB_Example.ipynb  Cycle Benchmarking Example.ipynb  Cycle_Benchmarking_Example.ipynb  Fully Random Binary RB Example.ipynb  Fully Random MB Example.ipynb  Fully Random SQRB Example.ipynb  Fully_Random_Binary_RB_Example.ipynb  Fully_Random_MB_Example.ipynb  Fully_Random_SQRB_Example.ipynb  GHZ Example.ipynb  GHZ_Example.ipynb  MCMR Crosstalk Comp Basis Example.ipynb  MCMR Crosstalk Example.ipynb  MCMR_Crosstalk_Example.ipynb  Mirror Benchmarking Example.ipynb  Mirror_Benchmarking_Example.ipynb  SPAM Example.ipynb  SPAM_Example.ipynb  SQRB Example.ipynb  SQRB_Example.ipynb  Single SQRB Example.ipynb  TQRB Example.ipynb  TQRB_Example.ipynb  Transport SQRB Example.ipynb  Transport_SQRB_Example.ipynb  mcmr_bar_charts_all_exps.ipynb
src/circuit_benchmarks_guppy/benchmarks/: __init__.py  binary_rb.py  experiment.py  fully_random_binary_rb.py  fully_random_mirror_benchmarking.py  fully_random_sqrb.py  ghz.py  mcmr_crosstalk.py  mirror_benchmarking.py  spam.py  sqrb.py  tq_cycle_benchmarking.py  tqrb.py  transport_sqrb.py
src/circuit_benchmarks_guppy/data/: __init__.py  experiment.p
src/circuit_benchmarks_guppy/tools/: bootstrap.py  dfl_parser.py
src/solarium/benchmarks/: __init__.py  binary_rb.py  experiment.py  fully_random_binary_rb.py  fully_random_mirror_benchmarking.py  fully_random_sqrb.py  ghz.py  mcmr_crosstalk.py  mcmr_crosstalk_comp_basis.py  mirror_benchmarking.py  spam.py  sqrb.py  tq_cycle_benchmarking.py  tqrb.py  transport_sqrb.py
src/solarium/data/: __init__.py
src/solarium/tools/: dfl_parser.py  imports.py
tests/: test_dummy.py  test_simulation.py
