################################################################################
### Build System
################################################################################

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solarium"]

################################################################################
### Project
################################################################################

[project]
name = "solarium"
version = "0.1.0"
description = "Quantum circuit benchmarks written in Guppy"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Karl Mayer", email = "karl.mayer@quantinuum.com"}
]
maintainers = [
  {name = "Karl Mayer", email = "karl.mayer@quantinuum.com"}
]
classifiers = [
    "Private :: Do Not Upload",
]


################################################################################
### Dependencies
################################################################################

dependencies = [
    # Core guppylang constructs
    "guppylang>=0.20.0",
    "hugr>=0.12.5",

    # Used for parsing DFL
    "msgpack>=1.1.1",

    # Analysis tools
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "scipy>=1.16.0",
]


[project.optional-dependencies]

[dependency-groups]
dev = [
    { include-group = "internal"},
    { include-group = "sim" },
    { include-group = "sim-noise" },
    { include-group = "hardware" },

    "ipykernel>=6.29.5",
    "pytest>=8.4.1",
    "ruff>=0.14.14",
    "ty>=0.0.13",
]

# Internal guppylang features
internal = [
    "qtm-platform>=0.5.2",
]

# Basic ability to simulate circuits
sim = [
    "selene-sim>=0.2.0"
]

# More complex noise models
sim-noise = [
    "selene-anduril",
    "eldarion",
    "selene-eldarion",
    "pecos-selene",
]

# Nexus API to submit jobs to Hardware or Emulators
hardware = [
    "qnexus>=0.22.0",
]

# Optional groups
docs = [
    "docutils>=0.21.2",
    "furo>=2024.8.6",
    "ipython>=9.4.0",
    "myst-parser>=4.0.1",
    "nbsphinx>=0.9.6",
    "nbsphinx-link>=1.3.1",
    "pylint>=3.3.7",
    "pypandoc>=1.15",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-plantuml>=0.30",
]



################################################################################
### Tools
################################################################################

[tool.uv]
package = true

[[tool.uv.index]]
name = "quantinuumsw"
url = "https://quantinuumsw.jfrog.io/artifactory/api/pypi/pypi_local/simple"
explicit = true


[tool.uv.sources]
qtm-platform = [
    # Try to download from SW Artifactory first
    { index = "quantinuumsw" }#,

    # Look for the wheel in the local directory
    #{ path = "./qtm_platform-0.5.2-py3-none-any.whl" }
]
selene-anduril = { index = "quantinuumsw" }
selene-eldarion = { index = "quantinuumsw" }
eldarion = { index = "quantinuumsw" }
pecos-selene = { index = "quantinuumsw" }


[tool.pytest.ini_options]
markers = [
    "slow_sim: marks tests as slow_sim (deselect with '-m \"not slow_sim\"')",
]

[tool.ty]

